--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     float: right;
 }
 
-.nav div.main_list ul{
+.nav div .main_list ul{
     width:100%;
     height: 65px;
     display: flex;
@@ -223,11 +223,19 @@ h4 {
     color: rgb(249, 213, 7);
 }
 
-/* About section */
-.about {
+section {
     max-width: 1440px;
     height: 100vh;
 }
+
+.yellow-title {
+    font-size: 120px;
+    font-weight: 1000;
+    font-style: italic;
+    color: rgb(249, 213, 7);
+}
+
+/* About section */
 
 .about .about-container {
     display: flex;
@@ -245,13 +253,6 @@ h4 {
     align-items: flex-start;
     justify-content: space-evenly;
     margin: 50px;
-}
-
-.about .about-container .left-content .hello {
-    font-size: 120px;
-    font-weight: 1000;
-    font-style: italic;
-    color: rgb(249, 213, 7);
 }
 
 .about .about-container .left-content h4 {
