--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     "Segoe UI Symbol"; */
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 .container{
     margin-left: 5%;
     margin-right: 5%;
@@ -225,7 +229,7 @@ h4 {
 
 section {
     max-width: 1440px;
-    height: 100vh;
+    margin: auto;
 }
 
 .yellow-title {
@@ -237,7 +241,8 @@ section {
 
 /* About section */
 
-.about .about-container {
+/* .about .about-container { */
+section div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -245,7 +250,8 @@ section {
     align-items: flex-start;
 }
 
-.about .about-container .left-content {
+/* .about .about-container .left-content { */
+section div .left-content{
     width: 500px;
     height: 500px;
     display: flex;
@@ -260,7 +266,7 @@ section {
     margin-bottom: 50px;
 }
 
-.about .about-container .left-content p {
+p {
     font-size: 20px;
     font-weight: 400;
     line-height: 120%;
@@ -279,32 +285,32 @@ section {
     }
 } */
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:768px) and (max-width: 1024px) {
     
     .container{
         margin: 0;
     }
 
     .nav{
-        width: 90%;
+        width: 100%;
     }
     
-    .nav div.logo{
+    .nav div .logo{
         margin-left: 15px;
     }
     
-    .nav div.main_list{
+    .nav div .main_list {
         width: 100%;
         margin-top: 65px;
         height: 0px;
         overflow: hidden;
     }
     
-    .nav div.show_list{
+    .nav div .show_list{
         height: 200px;
     }
     
-    .nav div.main_list ul{
+    .nav div .main_list ul{
         flex-direction: column;
         width: 100%;
         height: 200px;
@@ -313,13 +319,13 @@ section {
         left: 0;
     }
     
-    .nav div.main_list ul li{
+    .nav div .main_list ul li{
         width: 100%;
         height: 40px;
         background-color: #fff;
     }
     
-    .nav div.main_list ul li a{
+    .nav div .main_list ul li a{
       text-align: center;
         line-height: 40px;
         width: 100%;
@@ -327,7 +333,7 @@ section {
         display: table;
     }
     
-    .nav div.media_button{
+    .nav div .media_button{
         display: block;
     }
     .home div.banner-container {
@@ -357,7 +363,12 @@ section {
         top: 39px;
     }
 
-    .about .about-container .left-content {
+    section {
+        width: 100%;
+        height: 75vh;
+    }
+
+    section div .left-content {
         width: 90%;
         margin: 2rem 2rem;
     }
@@ -368,7 +379,7 @@ section {
     
     .about .about-container .right-content img {
         height: 600px;
-        margin: 50px;
+        margin: 50px 0;
     }
     
     @media screen and (min-width: 768px) and (max-width: 1024px) {
