--- a/style.css
+++ b/style.css
@@ -5,17 +5,6 @@
     transition: all 0.4s;
     font-family: 'Belanosima', sans-serif;
     font-family: 'Playfair Display', serif;
-    /* font-family: 'Playfair Display', serif; */
-    /* font-family: -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Helvetica,
-    Arial,
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol"; */
 }
 
 html {
@@ -155,34 +144,7 @@ html {
     transform: rotate3d(0, 0, 1, -20deg);
 }
 
-.home{
-    width: 100%;
-    height: 100vh;
-    background-color: #f5f5f5;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;   
-}
 
-.home div.banner-container {
-    margin-top: 65px;
-    width: 450px;
-    height: 78vh;
-    /* background-color: #ddd; */
-    border: 2px solid #000;
-    display: flex; 
-    padding-left: 100px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;   
-}
-
-.home .banner-container .title-box {
-    text-align: end;
-    background-color: #f5f5f5;
-    position: relative;
-}
 
 h1 {
     font-family: 'Playfair Display', serif;
@@ -242,16 +204,16 @@ section {
 /* About section */
 
 /* .about .about-container { */
-section div {
+.section div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
+    padding-top: 86px;
 }
 
-/* .about .about-container .left-content { */
-section div .left-content{
+.section div .left-content {
     width: 500px;
     height: 500px;
     display: flex;
@@ -263,6 +225,7 @@ section div .left-content{
 
 .about .about-container .left-content h4 {
     align-self: flex-start;
+    /* margin-top: 105px; */
     margin-bottom: 50px;
 }
 
@@ -273,10 +236,47 @@ p {
     margin-bottom: 20px;
 }
 
-.about .about-container .right-content img {
+.about div.about-container .right-content img {
     height: 600px;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 0;
     margin-bottom: 50px;
+}
+
+.skills .skills-container div.right-content img {
+    height: 150px;
+    
+    /* margin-top: 105px; */
+    /* margin-bottom: 50px; */
+}
+
+.home{
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;   
+}
+
+.home div.banner-container {
+    margin-top: 65px;
+    width: 450px;
+    height: 78vh;
+    /* background-color: #ddd; */
+    border: 2px solid #000;
+    display: flex; 
+    padding-left: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;   
+}
+
+.home .banner-container .title-box {
+    text-align: end;
+    background-color: #f5f5f5;
+    position: relative;
 }
 
 /* @media screen and (min-width: 768px) and (max-width: 1024px) {
