--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ section {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
-    padding-top: 86px;
+    padding-top: 55px;
 }
 
 .section div .left-content {
@@ -219,15 +219,11 @@ section {
     display: flex;
     flex-flow: column;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 50px;
+    margin-top: 0;
 }
 
-.about .about-container .left-content h4 {
-    align-self: flex-start;
-    /* margin-top: 105px; */
-    margin-bottom: 50px;
-}
 
 p {
     font-size: 20px;
@@ -242,9 +238,16 @@ p {
     padding-top: 0;
     margin-bottom: 50px;
 }
+.skills .skills-container div.right-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
 
 .skills .skills-container div.right-content img {
     height: 150px;
+    margin: 5px;
     
     /* margin-top: 105px; */
     /* margin-bottom: 50px; */
